--- a/content/blog/algorithms/1.Two_Sum.md
+++ b/content/blog/algorithms/1.Two_Sum.md
@@ -5,36 +5,88 @@ category: 'Algorithms'
 draft: false
 ---
 
-Q.
+## Q.
+
 Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.
 
 You may assume that each input would have exactly one solution, and you may not use the same element twice.
 
 You can return the answer in any order.
 
-Example 1:
-
+### Example 1:
+```sh
 Input: nums = [2,7,11,15], target = 9
 Output: [0,1]
-Output: Because nums[0] + nums[1] == 9, we return [0, 1].
+Output: Because nums[0] + nums[1] == 9, we return [0, 1]
+```
 
-Example 2:
-
+### Example 2:
+```sh
 Input: nums = [3,2,4], target = 6
 Output: [1,2]
+```
 
-Example 3:
-
+### Example 3:
+```sh
 Input: nums = [3,3], target = 6
 Output: [0,1]
+```
 
- 
-
-Constraints:
-
+### Constraints: 
+```sh
     2 <= nums.length <= 104
     -109 <= nums[i] <= 109
     -109 <= target <= 109
     Only one valid answer exists.
+```
 
-A.
+## A.
+
+### My Code
+```js
+/**
+- @param {number[]} nums
+- @param {number} target
+- @return {number[]}
+*/
+
+var twoSum = function(nums, target) {
+const numsSize = nums.length;
+let result = [];
+
+    for (let i=0;i<numsSize;i++) {
+        for (let j=0;j<numsSize;j++) {
+
+            if (i === j) {
+                continue;
+            }
+
+            if ((nums[i] + nums[j]) === target) {
+                result.push(i);
+                result.push(j);
+                return result;
+            }
+        }
+    }
+};
+```
+### most:
+```js
+    /**
+     * @param {number[]} nums
+     * @param {number} target
+     * @return {number[]}
+     */
+    var twoSum = function(nums, target) {
+        let map = new Map();
+
+        for(let i = 0; i < nums.length; i ++) {
+            if(map.has(target - nums[i])) {
+                return [map.get(target - nums[i]), i];
+            } else {
+                map.set(nums[i], i);
+            }
+        }
+    	return [];
+    };
+```
