Reverse Integer 수정

--- a/content/blog/algorithms/7.Reverse_Integer.md
+++ b/content/blog/algorithms/7.Reverse_Integer.md
@@ -40,6 +40,7 @@ Output: 0
 ```
 
 ## A:
+### my Code
 ```js
 /**
 - @param {number} x
@@ -85,33 +86,29 @@ x *= (-1);
     }
     return result;
     };
+```
+### most1:
 
-    most1:
+```js
+var reverse = function(x) {
+  const absReversed = Math.abs(x).toString().spli('').reverse().join('');
+  if (absReversed > 2**31) return 0;
+  return absReversed * Math.sign(x);
+};
+```
 
-    ```
-    var reverse = function(x) {
-      const absReversed = Math.abs(x).toString().split('').reverse().join('');
-      if (absReversed > 2**31) return 0;
-      return absReversed * Math.sign(x);
-    };
-    ```
+### most2:
 
-    most2:
-
-    ```
-    if (x < 0) return -reverse(-x);
-
-    var reversedInt = 0;
-
-    while(x>0) {
-        var a = x%10;
-        x = Math.floor(x/10);
-
-        //Should no larger than Math.floor(Number.MAX_VALUE/10)
-        if(reversedInt >= 214748365)
-            return 0;
-        reversedInt = reversedInt*10+a;
-    }
-
-    return reversedInt;
-    ```
+```js
+if (x < 0) return -reverse(-x);
+var reversedInt = 0;
+while(x>0) {
+    var a = x%10;
+    x = Math.floor(x/10);
+    //Should no larger than Math.floor(NumberMAX_VALUE/10)
+    if(reversedInt >= 214748365)
+        return 0;
+    reversedInt = reversedInt*10+a;
+}
+return reversedInt;
+```
