--- a/content/blog/algorithms/1.Two_Sum.md
+++ b/content/blog/algorithms/1.Two_Sum.md
@@ -5,7 +5,7 @@ category: 'Algorithms'
 draft: false
 ---
 
-## Q.
+## Question.
 
 Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.
 
@@ -34,13 +34,13 @@ Output: [0,1]
 
 ### Constraints: 
 ```sh
-    2 <= nums.length <= 104
-    -109 <= nums[i] <= 109
-    -109 <= target <= 109
-    Only one valid answer exists.
+2 <= nums.length <= 104
+-109 <= nums[i] <= 109
+-109 <= target <= 109
+Only one valid answer exists.
 ```
 
-## A.
+## Answer.
 
 ### My Code
 ```js
@@ -72,21 +72,20 @@ let result = [];
 ```
 ### most:
 ```js
-    /**
-     * @param {number[]} nums
-     * @param {number} target
-     * @return {number[]}
-     */
-    var twoSum = function(nums, target) {
-        let map = new Map();
-
-        for(let i = 0; i < nums.length; i ++) {
-            if(map.has(target - nums[i])) {
-                return [map.get(target - nums[i]), i];
-            } else {
-                map.set(nums[i], i);
-            }
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[]}
+ */
+var twoSum = function(nums, target) {
+    let map = new Map();
+    for(let i = 0; i < nums.length; i ++) {
+        if(map.has(target - nums[i])) {
+            return [map.get(target - nums[i]), i];
+        } else {
+            map.set(nums[i], i);
         }
-    	return [];
-    };
+    }
+	return [];
+};
 ```
