reverse integer post 수정

--- a/content/blog/algorithms/7.Reverse_Integer.md
+++ b/content/blog/algorithms/7.Reverse_Integer.md
@@ -5,7 +5,7 @@ category: 'Algorithms'
 draft: false
 ---
 
-## Q.
+## Question.
 
 Given a signed 32-bit integer `x`, return `x` *with its digits reversed*. If reversing `x` causes the value to go outside the signed 32-bit integer range `[-231, 231 - 1]`, then return `0`.
 
@@ -39,7 +39,7 @@ Output: 0
 - `231 <= x <= 231 - 1`
 ```
 
-## A:
+## Answer:
 ### my Code
 ```js
 /**
