--- a/content/blog/algorithms/1.Two_Sum.md
+++ b/content/blog/algorithms/1.Two_Sum.md
@@ -91,18 +91,20 @@ var twoSum = function(nums, target) {
 };
 ```
 
-**map.has(key)**
-- Syntax
+
+### map.has(key)
+- **Syntax**
 ```js
 map.has(key)
 ```
-- Parameters
+- **Parameters**
+
 `key` : The key of the element to test for presence in the `Map` object.
 
-- Return Value
+- **Return Value**\n
 `true` if an element with the specified `key` exists in the `Map` object; otherwise `false`. 
 
-- Examples
+- **Examples**
 ```js
 let myMap = new Map()
 myMap.set('bar', "foo")
@@ -111,18 +113,19 @@ myMap.has('bar')   // returns true
 myMap.has('baz')   // returns false
 ```
 
-**map.get(key)**
-- Syntax
+
+### map.get(key)
+- **Syntax**
 ```js
 map.get(key)
 ```
-- Parameters
+- **Parameters**
 `key` : The key of the element to return from the `Map` object.
 
-- Return Value
+- **Return Value**
 The element associated with the specified `key`, or undefined if the `key` can't be found in the `Map` object. 
 
-- Examples
+- **Examples**
 ```js
 let myMap = new Map();
 myMap.set('bar', 'foo');
@@ -131,18 +134,19 @@ myMap.get('bar');   // Returns "foo"
 myMap.get('baz');   // Returns undefined
 ```
 
-**map.set(key)**
-- Syntax
+
+### map.set(key)
+- **Syntax**
 ```js
 map.set(key)
 ```
-- Parameters
+- **Parameters**
 `key` : The key of the element to add to the `Map` object.
 
-- Return Value
+- **Return Value**
 The value of the element to add to the `Map` object.
 
-- Examples
+- **Examples**
 ```js
 let myMap = new Map()
 
