--- a/content/blog/algorithms/1.Two_Sum.md
+++ b/content/blog/algorithms/1.Two_Sum.md
@@ -101,14 +101,15 @@ map.has(key)
 
 `key` : The key of the element to test for presence in the `Map` object.
 
-- **Return Value**\n
+- **Return Value**
+
 `true` if an element with the specified `key` exists in the `Map` object; otherwise `false`. 
 
 - **Examples**
+
 ```js
 let myMap = new Map()
 myMap.set('bar', "foo")
-
 myMap.has('bar')   // returns true
 myMap.has('baz')   // returns false
 ```
@@ -120,12 +121,15 @@ myMap.has('baz')   // returns false
 map.get(key)
 ```
 - **Parameters**
+
 `key` : The key of the element to return from the `Map` object.
 
 - **Return Value**
+
 The element associated with the specified `key`, or undefined if the `key` can't be found in the `Map` object. 
 
 - **Examples**
+
 ```js
 let myMap = new Map();
 myMap.set('bar', 'foo');
@@ -141,12 +145,15 @@ myMap.get('baz');   // Returns undefined
 map.set(key)
 ```
 - **Parameters**
+
 `key` : The key of the element to add to the `Map` object.
 
 - **Return Value**
+
 The value of the element to add to the `Map` object.
 
 - **Examples**
+
 ```js
 let myMap = new Map()
 
