add Most Voted Codes

--- a/content/blog/algorithms/20.Valid_Parentheses.md
+++ b/content/blog/algorithms/20.Valid_Parentheses.md
@@ -105,3 +105,23 @@ function checkOpen(char) {
     }
 }
 ```
+
+
+### Math.abs()
+- **Syntax**
+```js
+
+```
+- **Parameters**
+
+    `key` : The key of the element to add to the `Map` object.
+
+- **Return Value**
+
+    The value of the element to add to the `Map` object.
+
+- **Examples**
+
+    ```js
+    
+    ```
