--- a/content/blog/algorithms/26.Remove Duplicates_from_Sorted_Array.md
+++ b/content/blog/algorithms/26.Remove Duplicates_from_Sorted_Array.md
@@ -88,3 +88,17 @@ let idx = 0;
     return nums.length;
 };
 ```
+
+### Most Voted:
+```js
+var removeDuplicates = function(nums) {
+    let start = 0     //O(1)
+    for(i=0;i<nums.length;i++){   //O(n)
+        if(nums[i] != nums[i+1]){
+            nums[start] = nums[i]
+            start++
+        }
+    }
+    return start
+};
+```
