--- a/content/blog/algorithms/7.Reverse_Integer.md
+++ b/content/blog/algorithms/7.Reverse_Integer.md
@@ -109,3 +109,179 @@ while(x>0) {
 }
 return reversedInt;
 ```
+
+
+### Array.splice()
+- **Syntax**
+```js
+splice(start)
+splice(start, deleteCount)
+splice(start, deleteCount, item1)
+splice(start, deleteCount, item1, item2, itemN)
+
+```
+- **Parameters**
+
+    
+`start` : The index at which to start changing the array.
+If greater than the length of the array, start will be set to the length of the array. In this case, no element will be deleted but the method will behave as an adding function, adding as many element as item[n*] provided.
+If negative, it will begin that many elements from the end of the array. (In this case, the origin -1, meaning -n is the index of the nth last element, and is therefore equivalent to the index of array.length - n.) If array.length + start is less than 0, it will begin from index 0.
+
+`deleteCount` (Optional) : An integer indicating the number of elements in the array to remove from start.
+If deleteCount is omitted, or if its value is equal to or larger than array.length - start (that is, if it is equal to or greater than the number of elements left in the array, starting at start), then all the elements from start to the end of the array will be deleted.
+If deleteCount is 0 or negative, no elements are removed. In this case, you should specify at least one new element (see below).
+
+`item1, item2, ... ` (Optional) : The elements to add to the array, beginning from start. If you do not specify any elements, splice() will only remove elements from the array. 
+
+- **Return Value**
+
+    An array containing the deleted elements.
+    If only one element is removed, an array of one element is returned.
+    If no elements are removed, an empty array is returned.
+
+- **Examples**
+
+    Remove 0 (zero) elements before index 2, and insert "drum"
+    
+    ```js
+    let myFish = ['angel', 'clown', 'mandarin', 'sturgeon']
+        let removed = myFish.splice(2, 0, 'drum')
+
+    // myFish is ["angel", "clown", "drum", "mandarin",     "sturgeon"]
+        // removed is [], no elements removed
+    ```
+
+    Remove 0 (zero) elements before index 2, and insert     "drum" and "guitar"
+
+    ```js
+    let myFish = ['angel', 'clown', 'mandarin', 'sturgeon']
+        let removed = myFish.splice(2, 0, 'drum', 'guitar')
+
+    // myFish is ["angel", "clown", "drum", "guitar",   "mandarin", "sturgeon"]
+        // removed is [], no elements removed
+    ```
+
+    Remove 1 element at index 3
+
+    ```js
+    let myFish = ['angel', 'clown', 'drum', 'mandarin',     'sturgeon']
+        let removed = myFish.splice(3, 1)
+
+    // myFish is ["angel", "clown", "drum", "sturgeon"]
+        // removed is ["mandarin"]
+    ```
+
+    Remove 1 element at index 2, and insert "trumpet"
+
+    ```js
+    let myFish = ['angel', 'clown', 'drum', 'sturgeon']
+        let removed = myFish.splice(2, 1, 'trumpet')
+
+    // myFish is ["angel", "clown", "trumpet", "sturgeon"]
+        // removed is ["drum"]
+    ```
+
+    Remove 2 elements from index 0, and insert "parrot",    "anemone" and "blue"
+
+    ```js
+    let myFish = ['angel', 'clown', 'trumpet', 'sturgeon']
+        let removed = myFish.splice(0, 2, 'parrot', 'anemone',  'blue')
+
+    // myFish is ["parrot", "anemone", "blue", "trumpet",   "sturgeon"]
+        // removed is ["angel", "clown"]
+    ```
+
+    Remove 2 elements, starting from index 2
+
+    ```js
+    let myFish = ['parrot', 'anemone', 'blue', 'trumpet',   'sturgeon']
+        let removed = myFish.splice(2, 2)
+
+    // myFish is ["parrot", "anemone", "sturgeon"]
+        // removed is ["blue", "trumpet"]
+    ```
+
+    Remove 1 element from index -2
+
+    ```js
+    let myFish = ['angel', 'clown', 'mandarin', 'sturgeon']
+        let removed = myFish.splice(-2, 1)
+
+    // myFish is ["angel", "clown", "sturgeon"]
+        // removed is ["mandarin"]
+    ```
+
+    Remove all elements, starting from index 2
+
+    ```js
+    let myFish = ['angel', 'clown', 'mandarin', 'sturgeon']
+        let removed = myFish.splice(2)
+
+    // myFish is ["angel", "clown"]
+    // removed is ["mandarin", "sturgeon"]
+    ```
+
+
+
+### Math.abs()
+- **Syntax**
+```js
+Math.abs(x)
+```
+- **Parameters**
+
+    `x` : A number.
+
+- **Return Value**
+
+    The absolute value of the given number.
+
+- **Examples**
+
+    ```js
+    Math.abs('-1');     // 1
+    Math.abs(-2);       // 2
+    Math.abs(null);     // 0
+    Math.abs('');       // 0
+    Math.abs([]);       // 0
+    Math.abs([2]);      // 2
+    Math.abs([1,2]);    // NaN
+    Math.abs({});       // NaN
+    Math.abs('string'); // NaN
+    Math.abs();         // NaN
+    ```
+
+
+
+### Math.sign()
+- **Syntax**
+```js
+Math.sign(x)
+```
+- **Parameters**
+
+    `x` : A number. If this argument is not a `number`, it is implicitly converted to one.
+
+- **Return Value**
+
+    A number representing the sign of the given argument:
+
+    If the argument is positive, returns `1`.
+    If the argument is negative, returns `-1`.
+    If the argument is positive zero, returns `0`.
+    If the argument is negative zero, returns `-0`.
+    Otherwise, `NaN` is returned.
+
+- **Examples**
+
+    ```js
+    Math.sign(3);     //  1
+    Math.sign(-3);    // -1
+    Math.sign('-3');  // -1
+    Math.sign(0);     //  0
+    Math.sign(-0);    // -0
+    Math.sign(NaN);   // NaN
+    Math.sign('foo'); // NaN
+    Math.sign();      // NaN
+    ```
+    
