--- a/content/blog/algorithms/7.Reverse_Integer.md
+++ b/content/blog/algorithms/7.Reverse_Integer.md
@@ -84,7 +84,7 @@ var reverse = function(x) {
 };
 ```
 
-### most1:
+### Most Voted 1:
 
 ```js
 var reverse = function(x) {
@@ -94,7 +94,7 @@ var reverse = function(x) {
 };
 ```
 
-### most2:
+### Most Voted 2:
 
 ```js
 if (x < 0) return -reverse(-x);
@@ -122,7 +122,6 @@ splice(start, deleteCount, item1, item2, itemN)
 ```
 - **Parameters**
 
-    
 `start` : The index at which to start changing the array.
 If greater than the length of the array, start will be set to the length of the array. In this case, no element will be deleted but the method will behave as an adding function, adding as many element as item[n*] provided.
 If negative, it will begin that many elements from the end of the array. (In this case, the origin -1, meaning -n is the index of the nth last element, and is therefore equivalent to the index of array.length - n.) If array.length + start is less than 0, it will begin from index 0.
@@ -132,6 +131,7 @@ If deleteCount is omitted, or if its value is equal to or larger than array.leng
 If deleteCount is 0 or negative, no elements are removed. In this case, you should specify at least one new element (see below).
 
 `item1, item2, ... ` (Optional) : The elements to add to the array, beginning from start. If you do not specify any elements, splice() will only remove elements from the array. 
+
 
 - **Return Value**
 
@@ -151,6 +151,7 @@ If deleteCount is 0 or negative, no elements are removed. In this case, you shou
         // removed is [], no elements removed
     ```
 
+
     Remove 0 (zero) elements before index 2, and insert     "drum" and "guitar"
 
     ```js
@@ -160,6 +161,7 @@ If deleteCount is 0 or negative, no elements are removed. In this case, you shou
     // myFish is ["angel", "clown", "drum", "guitar",   "mandarin", "sturgeon"]
         // removed is [], no elements removed
     ```
+
 
     Remove 1 element at index 3
 
@@ -171,6 +173,7 @@ If deleteCount is 0 or negative, no elements are removed. In this case, you shou
         // removed is ["mandarin"]
     ```
 
+
     Remove 1 element at index 2, and insert "trumpet"
 
     ```js
@@ -180,6 +183,7 @@ If deleteCount is 0 or negative, no elements are removed. In this case, you shou
     // myFish is ["angel", "clown", "trumpet", "sturgeon"]
         // removed is ["drum"]
     ```
+
 
     Remove 2 elements from index 0, and insert "parrot",    "anemone" and "blue"
 
@@ -191,6 +195,7 @@ If deleteCount is 0 or negative, no elements are removed. In this case, you shou
         // removed is ["angel", "clown"]
     ```
 
+
     Remove 2 elements, starting from index 2
 
     ```js
@@ -201,6 +206,7 @@ If deleteCount is 0 or negative, no elements are removed. In this case, you shou
         // removed is ["blue", "trumpet"]
     ```
 
+
     Remove 1 element from index -2
 
     ```js
@@ -210,6 +216,7 @@ If deleteCount is 0 or negative, no elements are removed. In this case, you shou
     // myFish is ["angel", "clown", "sturgeon"]
         // removed is ["mandarin"]
     ```
+
 
     Remove all elements, starting from index 2
 
@@ -284,4 +291,3 @@ Math.sign(x)
     Math.sign('foo'); // NaN
     Math.sign();      // NaN
     ```
-    
