--- a/content/blog/CS/1.Cookie.md
+++ b/content/blog/CS/1.Cookie.md
@@ -8,11 +8,11 @@ draft: false
 ## Cookie
 ---
 ### Cookie란?
-HTTP cookie. 인터넷 사용자가 어떠한 웹사이트를 방문할 경우 사용자의 웹 브로우저를 통해 인터넷 사용자의 컴퓨터나 다른 기기에 설치되는 작은 기록 정보 파일.
+HTTP cookie. 인터넷 사용자가 어떠한 웹사이트를 방문할 경우 `사용자의 웹 브로우저를 통해 인터넷 사용자의 컴퓨터나 다른 기기에 설치되는 작은 기록 정보 파일`.
 이 파일에 담긴 정보는 인터넷 사용자가 같은 웹사이트를 방문할 때마다 읽히고 수시로 새로운 정보로 바뀐다.
 
 ### 어원
-"쿠키"라는 용어는 프로그램이 수신 후 변경하지 않은 채로 반환되는 데이터의 패킷을 의미하는 매직 쿠키라는 용어에서 비롯되었다.
+"`쿠키`"라는 용어는 프로그램이 수신 후 변경하지 않은 채로 반환되는 데이터의 패킷을 의미하는 "Magic Cookie(매직 쿠키)"라는 용어에서 비롯되었다.
 
 ### 구조
 쿠키는 다음의 요소로 구성된다.
