--- a/content/blog/CS/5.TestDrivenDevelopment.md
+++ b/content/blog/CS/5.TestDrivenDevelopment.md
@@ -7,12 +7,15 @@ draft: false
 
 ## Test Driven Development
 ---
+
 ### TDD란?
 소프트웨어가 개발되기 전에 테스트 케이스로 변환되는 소프트웨어 요구 사항에 의존하고
 모든 테스트 케이스에 대해 소프트웨어를 반복적으로 테스트하여
 모든 소프트웨어 개발을 추적하는 소프트웨어 개발 프로세스.
 
 **소프트웨어가 먼저 개발되고 테스트 케이스가 나중에 생성되는 것과 반대**
+
+<center><img src="advantage_disadvantage.png" alt="advantage/disadvantage"> </center>
 
 ### TDD의 이점
 1. **코드의 유지보수가 용이**<br>
@@ -48,7 +51,7 @@ draft: false
 6. 상기 단계를 반복하여 실패/성공의 모든 테스트 케이스를 작성
 7. 개발된 코드들에 대해 모든 중복을 제거하며 리팩토링
 
-![img_1.png](tdd_cycle.png)
+<center><img src="tdd_cycle.png" alt="tdd lifecycle"></center>
 
 ### 접근 방법
 1. **가짜로 구현하기**<br>
