--- a/content/blog/CS/5.TestDrivenDevelopment.md
+++ b/content/blog/CS/5.TestDrivenDevelopment.md
@@ -15,7 +15,7 @@ draft: false
 
 **소프트웨어가 먼저 개발되고 테스트 케이스가 나중에 생성되는 것과 반대**
 
-<center><img src="advantage_disadvantage.png" alt="advantage/disadvantage"> </center>
+<div style="text-align: center;"><img src="advantage_disadvantage.png" alt="advantage/disadvantage"> </div>
 
 ### TDD의 이점
 1. **코드의 유지보수가 용이**<br>
@@ -51,7 +51,7 @@ draft: false
 6. 상기 단계를 반복하여 실패/성공의 모든 테스트 케이스를 작성
 7. 개발된 코드들에 대해 모든 중복을 제거하며 리팩토링
 
-<center><img src="tdd_cycle.png" alt="tdd lifecycle"></center>
+<div style="text-align: center;"><img src="tdd_cycle.png" alt="tdd lifecycle"></div>
 
 ### 접근 방법
 1. **가짜로 구현하기**<br>
@@ -74,6 +74,15 @@ draft: false
 - 개발하는 중에 코드를 많이 바꿔야 된다고 생각하는 경우
 - 내가 개발하고 나서 이 코드를 누가 유지보수할지 모르는 경우
 
+<br>
+
+#### My Comment
+최근 스타트업으로 이직하면서 여러가지 개발론을 배우고 적용시켜보고 싶었다.
+그 중 회의적인 견해도 존재하지만 개발 능력을 향상시킬 수 있다는 것에는 반론이 없는 TDD에 관심이 생겨 관련 자료를 조사했다.
+사내 개발 문화 전체를 변화시키진 못하더라도 내가 하는 개발에서 TDD를 적용시켜보고 그 장점을 보임으로써 서로에게 영감을 주는 개발 조직 전체의 스킬 향상이
+일상이 되었으면 한다.
+
 <br><br>
+
 출처: http://clipsoft.co.kr/wp/blog/tddtest-driven-development-%EB%B0%A9%EB%B2%95%EB%A1%A0/, https://ko.wikipedia.org/wiki/%ED%85%8C%EC%8A%A4%ED%8A%B8_%EC%A3%BC%EB%8F%84_%EA%B0%9C%EB%B0%9C, https://namu.wiki/w/%ED%85%8C%EC%8A%A4%ED%8A%B8%20%EC%A3%BC%EB%8F%84%20%EA%B0%9C%EB%B0%9C, https://mangkyu.tistory.com/182, https://toneyparky.tistory.com/3
 
