--- a/content/blog/CS/6.CodeReview.md
+++ b/content/blog/CS/6.CodeReview.md
@@ -7,7 +7,7 @@ draft: false
 
 ## Code Review
 ---
-<center><img src="code_scan.png" style="height: 150px"></center>
+<div style="text-align: center;"><img alt="code scan" src="code_scan.png" style="height: 150px"></div>
 
 ### 코드리뷰의 목적
 1. 기능의 정상 동작 여부
@@ -110,3 +110,8 @@ PR을 통해 코드리뷰가 끝난 후 Merge가 진행되지 않도록 PR Title
   - **P5**: 그냥 사소한 의견입니다 *(Approve)*
 
 
+#### My Comment
+코드리뷰는 이직 후 처음으로 업무 공유의 자리에서 발표한 기술 공유 주제이다. 이전 직장에서는 시도 할 수 없던 것이기 때문
+에 경험하고 싶었지만 다른 회사들도 이를 시도할 여유가 많진 않은것같았다. 서로의 코드는 커녕 무슨 일을 하는지조차 공유가 어려웠다(
+서로 관심조차 <span style="color: grey">~~없다~~</span>없었다). 현재 진행하고 있는 프로젝트가 끝나면 내가 먼저 리뷰를 요청
+하는 방식으로 프로세스의 변화를 주려는 노력을 해봐야겠다.
