CSS의 기초 수정

--- a/content/blog/CS/8.BasicOfCss.md
+++ b/content/blog/CS/8.BasicOfCss.md
@@ -73,20 +73,20 @@ h1 {
 
 ---
 
-### 캐스케이딩 : 
+### 캐스케이딩 
 사전적인 의미는 **“폭포처럼 떨어져 내린다”**. 디자인 속성이 **HTML 문서의 구조(DOM Tree)** 에서 상위 요소에서 정의한 디자인이 하위 요소로 전달되는 의미.
 - 상위 태그에서 정의된 디자인 속성은 하위 태그로 상속
 - 하위 태그에서 상위 태그에 정의된 디자인 속성을 변경할 수 있음
 
 ---
 
-### 우선순위 : 
+### 우선순위 
 동일한 디자인 속성이 외부 스타일시트, 내부 스타일시트, 인라인 스타일시트에 적용되어 있는 경우 우선순위는 가장 나중에 정의되는 스타일.
 **브라우저 디자인 정의 -> 외부 스타일 시트 -> 내부 스타일 시트 -> 인라인 스타일 시트**
 
 ---
 
-### 셀렉터(Selector/선택자) : 
+### 셀렉터(Selector/선택자) 
 태그, 아이디, 클래스를 셀렉터로 사용하며 이들을 조합하여 특정 조건에 맞는 셀렉터를 정의하여 사용
 
 **주의** :
